--- a/index.css
+++ b/index.css
@@ -1,168 +1,179 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
 body {
-    height: 100vh;
-    background-color: #fff;
+  height: 100vh;
+  background-color: #fff;
 }
 
 /* NAVBAR START */
 header {
-    position: relative;
-    padding: 0 ;
+  position: relative;
+  padding: 0;
 }
 
 .navbar {
-    
-    /* ff 3.6+ */
-    background:-moz-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%); 
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* safari 5.1+,chrome 10+ */
-    background:-webkit-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* opera 11.10+ */
-    background:-o-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* ie 6-9 */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#F0E9E9', GradientType=0 );
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#F0E9E9', GradientType=0 );
 
-    /* ie 10+ */
-    background:-ms-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* global 94%+ browsers support */
-    background:linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
-    width: 100%;
-    height: 60px;
-    max-width: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: 'oswald', sans-serif;
-
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
+  width: 100%;
+  height: 60px;
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "oswald", sans-serif;
 }
 
 .navbar li {
-    list-style: none;
-   
+  list-style: none;
 }
 .navbar a {
-    text-decoration: none;
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
 }
-
 
 .navbar A:hover {
-    color: #e32626;
-    
+  color: #e32626;
 }
 
-.navbar ul li::after{
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #e32626;
-    transition: width 0.4s;
-    margin: auto;
+.navbar ul li::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #e32626;
+  transition: width 0.4s;
+  margin: auto;
 }
 
-.navbar ul li:hover::after{
-    width: 100%;
-    transition: width 0.4s;
+.navbar ul li:hover::after {
+  width: 100%;
+  transition: width 0.4s;
 }
 .logo {
-    background-image: url(/src/assets/images/logo.png);
-    background-size: cover;
-    background-position: center;
-    width: 10rem;
-    height: 10rem;
-
+  background-image: url(/src/assets/images/logo.png);
+  background-size: cover;
+  background-position: center;
+  width: 10rem;
+  height: 10rem;
 }
 .navbar .logo a {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .navbar .links {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 .navbar .toggle_btn {
-    display: none;
-    font-size: 1.5rem;
-    cursor: pointer;
+  display: none;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .action_btn {
-    background-color: #fff;
-    color: red !important;
-    padding: 0.5rem 1rem;
-    border: none;
-    outline: none;
-    border-radius: 20px;    
-    font-size: 0.8rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: scale 0.2 ease;
+  background-color: #fff;
+  color: red !important;
+  padding: 0.5rem 1rem;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: scale 0.2 ease;
 }
 .action_btn:hover {
-    scale: 1.05;
-
+  scale: 1.05;
 }
 .action_btn:active {
-    scale: 0.95;
+  scale: 0.95;
 }
 
 /* DROPDOWN */
 .dropdown_menu {
-    display: none;
-    position: absolute;
-    width: 300px;
-    height: 0;
-    top: 60px;
-    z-index: 999;
-    right: 2rem;
-    background: rgba(240, 237, 237, 0.5);
-    backdrop-filter: blur(15px);
-    border-radius: 10px;
-    overflow: hidden;
-    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-   
-
+  display: none;
+  position: absolute;
+  width: 300px;
+  height: 0;
+  top: 60px;
+  z-index: 9999;
+  right: 2rem;
+  background: rgba(240, 237, 237, 0.5);
+  backdrop-filter: blur(15px);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.dropdown_menu.open{
-    height: 300px;
-
+.dropdown_menu.open {
+  height: 400px;
 }
 .dropdown_menu li {
-    padding: 0.7rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 .dropdown_menu a {
-    text-decoration: none;
-    color: #d30707;
-    pointer-events: auto;
+  text-decoration: none;
+  color: #d30707;
+  pointer-events: auto;
 }
 
-
 .dropdown_menu .action_btn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-   
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 /* DROPDOWN END */
@@ -170,173 +181,251 @@ header {
 /* RESPONSIVE PART */
 
 @media (max-width: 992px) {
-    .navbar .links,
-    .navbar .action_btn {
-        display: none;
-    }
-    .navbar .toggle_btn {
-        display: block;
-    }
-    .dropdown_menu {
-        display: block;
-    }
-    .dropdown_menu a{
-        display: block;
-    }
+  .navbar .links,
+  .navbar .action_btn {
+    display: none;
+  }
+  .navbar .toggle_btn {
+    display: block;
+  }
+  .dropdown_menu {
+    display: block;
+  }
+  .dropdown_menu a {
+    display: block;
+  }
 }
 
 @media (max-width: 547px) {
-    .dropdown_menu {
-        left: 2rem;
-        width: unset;
-    }
-    .dropdown_menu a{
-        display: block;
-       
-    }
+  .dropdown_menu {
+    left: 2rem;
+    width: unset;
+  }
+  .dropdown_menu a {
+    display: block;
+  }
 }
 
 /* NAVBAR END */
 
 /* HERO SECTION */
+
 #hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  font-family: "oswald", sans-serif;
+  font-weight: bolder;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 
-    background-image: url(./src/assets/images/background1.jpg);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 130vh;
-    display: flex;
-    align-items: right;
-    justify-content: right;
+.portrait {
+  width: 75vh;
+  height: 40vh;
+  background-image: url(/src/assets/images/background1.jpg);
+  background-size: cover;
+  background-position: center;
+  margin: 4rem 4rem 2rem 4rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.text {
+  width: 50vw;
+  background-color: #f8f8f8;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.text ul {
+  list-style: none;
+  margin-top: 1rem;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text li {
+  font-size: 18px;
+  color: #999;
+  margin: 0 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.text li:hover {
+  color: #393939;
+  transform: scale(1.1);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 760px) {
+  #hero {
     flex-direction: column;
-    text-align: center;
-    color: #e11010;
-    font-family: 'oswald', sans-serif;
+  }
+
+  .portrait {
+    width: 100%;
+    height: 85vh;
+    margin: 2rem 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .text {
+    margin: 2rem 1rem;
+    padding: 1rem;
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 5vw;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    text-shadow: none;
+  }
+
+  p {
+    font-size: 3vw;
+    margin-bottom: 2rem;
+    line-height: 1.5;
+    font-weight: normal;
+    text-shadow: none;
+  }
+
+  .text ul {
+    margin-bottom: 2rem;
+  }
+
+  .text li {
+    font-size: 2vw;
+    margin: 0 1rem;
+    letter-spacing: 1px;
+    transition: all 0.3s ease;
+  }
+
+  .text li:hover {
+    color: #393939;
+    transform: scale(1.1);
+  }
 }
-.textContainer {
-    font-family: 'oswald', sans-serif;
-    
-    background:-moz-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%); 
-
-    /* safari 5.1+,chrome 10+ */
-    background:-webkit-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
-
-    /* opera 11.10+ */
-    background:-o-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
-
-    /* ie 6-9 */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#F0E9E9', GradientType=0 );
-
-    /* ie 10+ */
-    background:-ms-linear-gradient(90deg, rgba(240, 233, 233, 0.396) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
-
-    /* global 94%+ browsers support */
-    background:linear-gradient(90deg, rgba(240, 233, 233, 0.293) 0%, rgba(247, 222, 222, 0.347) 12%, rgba(255, 0, 0, 0.264) 100%);
-    
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    
-}
-
-.imageContainer {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-}
-
-
-  
-    
 
 /* Hero section END */
 
 /* FOOTER */
 .footer {
-    position: relative;
-    width: 100%;
-    /* ff 3.6+ */
-    background:-moz-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%); 
+  position: relative;
+  width: 100%;
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* safari 5.1+,chrome 10+ */
-    background:-webkit-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* opera 11.10+ */
-    background:-o-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* ie 6-9 */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#F0E9E9', GradientType=0 );
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#F0E9E9', GradientType=0 );
 
-    /* ie 10+ */
-    background:-ms-linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
 
-    /* global 94%+ browsers support */
-    background:linear-gradient(90deg, rgba(240, 233, 233, 1) 0%, rgba(247, 222, 222, 1) 12%, rgba(255, 0, 0, 1) 100%);
-    min-height: 75px;
-    padding: 10px 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .social-icon,
-  .menu {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
-    flex-wrap: wrap;
-  }
-  
-  .social-icon__item,
-  .menu__item {
-    list-style: none;
-  }
-  
-  .social-icon__link {
-    font-size: 2rem;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-  }
-  .social-icon__link:hover {
-    transform: translateY(-10px);
-  }
-  
-  .menu__link {
-    font-size: 1.2rem;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-    text-decoration: none;
-    opacity: 0.75;
-    font-weight: 300;
-  }
-  
-  .menu__link:hover {
-    opacity: 1;
-  }
-  
-  .footer p {
-    color: #fff;
-    margin: 15px 0 10px 0;
-    font-size: 0.8rem;
-    font-family: 'oswald', sans-serif;
-    font-weight: 300;
-  }
-  .sigle {
-    display: flex;
-    align-items: center;
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    90deg,
+    rgba(240, 233, 233, 1) 0%,
+    rgba(247, 222, 222, 1) 12%,
+    rgba(255, 0, 0, 1) 100%
+  );
+  min-height: 75px;
+  padding: 10px 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-icon,
+.menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+
+.social-icon__item,
+.menu__item {
+  list-style: none;
+}
+
+.social-icon__link {
+  font-size: 2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.social-icon__link:hover {
+  transform: translateY(-10px);
+}
+
+.menu__link {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu__link:hover {
+  opacity: 1;
+}
+
+.footer p {
+  color: #fff;
+  margin: 15px 0 10px 0;
+  font-size: 0.8rem;
+  font-family: "oswald", sans-serif;
+  font-weight: 300;
+}
+.sigle {
+  display: flex;
+  align-items: center;
 }
 
 .sigle img {
-    height: 3rem;
-    margin-right: 0.5rem;
+  height: 3rem;
+  margin-right: 0.5rem;
 }
-  /* Footer END */
-  
+/* Footer END */
