--- a/src/pages/Galerie/index.css
+++ b/src/pages/Galerie/index.css
@@ -180,6 +180,217 @@ header {
     }
 }
 
+
+/* gallery */
+.gallery-container {
+  font-family: 'oswald', sans-serif;
+  width: 100%;
+  color: #A6CFFF;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 50px 20px;
+  border-radius: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;;
+}
+
+.gallery-container h1 {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 24px;
+}
+
+.gallery {
+  position: relative;
+}
+
+.slider {
+  display: flex;
+  flex-wrap: nowrap;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+  height: 25rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  overflow: hidden;
+}
+
+.slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.slider img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+}
+
+
+.slide img {
+  max-width: 100%;
+  height: auto;
+}
+
+.slide-text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+}
+
+
+.controls {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+  
+  
+}
+
+.prev,
+.next {
+  background-color: #ffffff;
+  border: none;
+  color: #d30707;
+  font-size: 16px;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.prev:hover,
+.next:hover {
+  background-color: #d30707;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 768px) {
+  .slider {
+    height: 300px;
+  }
+}
+/* styles for the modal */
+.modal {
+  display: none; /* hide the modal by default */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+.masaj {
+  display: flex;
+  flex-direction: column;
+}
+
+.masaj h1 {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 1rem;
+}
+.tipuri-masaj {
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 20px;
+}
+
+.tip {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.tip img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+
+.tip h2 {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.video-item {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-position: center;
+  background-size: cover;
+}
+
+.video-item img {
+  width: 100%;
+  height: 30rem;
+  cursor: pointer;
+  border-radius: 1rem;
+  background-position: center;
+  background-size: cover;
+}
+
+.video-item .play-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  color: #fff;
+  cursor: pointer;
+}
+
+
+  /* gallery end */
+
 /* Footer */
 .footer {
     position: relative;
