--- a/src/pages/Galerie/index.css
+++ b/src/pages/Galerie/index.css
@@ -136,7 +136,7 @@ header {
 
 }
 .dropdown_menu.open{
-    height: 300px;
+    height: auto;
 
 }
 .dropdown_menu li {
@@ -179,6 +179,8 @@ header {
         width: unset;
     }
 }
+
+
 
 
 /* gallery */
@@ -323,8 +325,12 @@ header {
 
 
 .masaj {
+  padding: 5px;
+  margin: 0.5rem;
+  border-radius: 2rem;
   display: flex;
   flex-direction: column;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;;
 }
 
 .masaj h1 {
@@ -337,6 +343,7 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-gap: 20px;
+  
 }
 
 .tip {
@@ -348,7 +355,7 @@ header {
 
 .tip img {
   max-width: 100%;
-  height: auto;
+  height: 8rem;
   margin-bottom: 10px;
   border-radius: 2rem;
   cursor: pointer;
