--- a/index.css
+++ b/index.css
@@ -155,7 +155,7 @@ header {
 }
 
 .dropdown_menu.open {
-  height: 400px;
+  height: auto;
 }
 .dropdown_menu li {
   padding: 0.7rem;
@@ -214,31 +214,28 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   font-family: "oswald", sans-serif;
   font-weight: bolder;
   text-align: center;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  background-position: center;
+  background-size: cover;
+  background-image: url(./src/assets/images/background1.jpg);
 }
 
-.portrait {
-  width: 75vh;
-  height: 40vh;
-  background-image: url(/src/assets/images/background1.jpg);
-  background-size: cover;
-  background-position: center;
-  margin: 4rem 4rem 2rem 4rem;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
 
 .text {
   width: 50vw;
-  background-color: #f8f8f8;
+  background-color: #ece6e6cc;
+ 
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin-left: 25rem;
+  
 }
 .text ul {
   list-style: none;
@@ -249,9 +246,14 @@ header {
   align-items: center;
 }
 
+.text a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .text li {
   font-size: 18px;
-  color: #999;
+  color: #000000;
   margin: 0 20px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -266,18 +268,11 @@ header {
 @media (max-width: 760px) {
   #hero {
     flex-direction: column;
-  }
-
-  .portrait {
-    width: 100%;
-    height: 85vh;
-    margin: 2rem 0;
-    background-size: contain;
-    background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
   }
 
-  .text {
+    .text {
     margin: 2rem 1rem;
     padding: 1rem;
     width: 100%;
@@ -315,7 +310,49 @@ header {
   }
 }
 
+@media (max-width: 469px) {
+  #hero {
+    flex-direction: column;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .sigle img {
+    width: 100%;
+  }
+}
 /* Hero section END */
+
+/* certificat section */
+.formeStudiu {
+ background-color: #ece6e6cc;
+ padding: 2rem;
+ margin: 0;
+ font-family: Montserrat, sans-serif;
+ 
+}
+.formeStudiu h2 {
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.formeStudiu li {
+  list-style: none;
+  margin: 1rem 0;
+  -webkit-box-shadow: -12px 2px 52px -14px rgba(79,10,20,0.73);
+-moz-box-shadow: -12px 2px 52px -14px rgba(79,10,20,0.73);
+box-shadow: -12px 2px 52px -14px rgba(79,10,20,0.73);
+  border-radius: 1rem;
+  padding: 1rem;
+  background: rgb(200,161,161);
+background: -moz-linear-gradient(0deg, rgba(200,161,161,1) 0%, rgba(239,240,231,1) 100%);
+background: -webkit-linear-gradient(0deg, rgba(200,161,161,1) 0%, rgba(239,240,231,1) 100%);
+background: linear-gradient(0deg, rgba(200,161,161,1) 0%, rgba(239,240,231,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#c8a1a1",endColorstr="#eff0e7",GradientType=1);
+}
+
 
 /* FOOTER */
 .footer {
